<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/card_back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_home" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"


        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/user"

        android:textColor="@color/green"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"


        android:text="@string/think_out_of_trash_recyclee"
        android:textColorLink="#424242"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215"
        app:srcCompat="@drawable/recyclelogo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="208dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textView4">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="135dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/plastic"
                style="@style/my_style"

                android:background="@drawable/category_card_bc"
                app:srcCompat="@drawable/plasticc" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Ewaste"
                android:layout_alignStart="@id/Ewaste"
                android:layout_alignEnd="@id/Ewaste"
                android:layout_marginStart="1dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-23dp"
                android:gravity="center"
                android:text="@string/e_waste"
                android:textColor="@color/black"


                android:textSize="17sp" />

            <ImageView
                android:id="@+id/Ewaste"
                style="@style/my_style"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/plastic"

                android:background="@drawable/category_card_bc"
                app:srcCompat="@drawable/ewasteee" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/plastic"
                android:layout_alignStart="@id/plastic"
                android:layout_alignEnd="@id/plastic"
                android:layout_marginStart="17dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="-23dp"
                android:text="@string/plastic"
                android:textColor="@color/black"


                android:textSize="17sp" />

            <ImageView
                android:id="@+id/metal"
                style="@style/my_style"

                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/Ewaste"
                android:background="@drawable/category_card_bc"
                app:srcCompat="@drawable/metall" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Ewaste"
                android:layout_alignStart="@id/Ewaste"
                android:layout_alignEnd="@id/Ewaste"
                android:layout_marginStart="122dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="-90dp"
                android:layout_marginBottom="-23dp"
                android:text="@string/metal"
                android:textColor="@color/black"


                android:textSize="17sp" />

            <ImageView
                android:id="@+id/paper"
                style="@style/my_style"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/metal"

                android:background="@drawable/category_card_bc"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/paperr" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/metal"
                android:layout_alignStart="@id/metal"
                android:layout_alignEnd="@id/metal"

                android:layout_marginStart="122dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="-90dp"
                android:layout_marginBottom="-23dp"
                android:text="@string/paper"
                android:textColor="@color/black"


                android:textSize="17sp" />

        </RelativeLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/recycled_products"
        android:textColor="@color/black"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="130dp"

        app:cardCornerRadius="30dp"
        app:cardElevation="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="210dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/card_back_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/papercups" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_background"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/useful_products"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.751" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="130dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="-25dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="34dp"
                    android:background="@drawable/tv_background"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/decorative_art"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7"
                    app:layout_constraintVertical_bias="0.65" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="21dp"
                    android:background="@drawable/card_back_btn"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/decorrativee" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>